# Everything-to-Everything

./: .gitignore  README.md  pyproject.toml
docs/: index.md
ete/: __main__.py  core.py
ete/remap/: yaml.py
src/ete/: __main__.py
